[gd_scene load_steps=7 format=2]

[ext_resource path="res://NPC/Liro-Sheet.png" type="Texture" id=1]
[ext_resource path="res://idle 6 frames.tres" type="Animation" id=2]
[ext_resource path="res://UI/hey.png" type="Texture" id=3]
[ext_resource path="res://NPC/liro.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle 4 frames"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.94808, 4.27632 )

[node name="liro" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle 6 frames"
"anims/idle 4 frames" = SubResource( 1 )
"anims/idle 6 frames" = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -20.3624, 1.96431 )
scale = Vector2( 7.73959, 3.04 )
shape = SubResource( 2 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( -0.667419, -34.3721 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
